# ladar

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  pyproject.toml  tox.ini
doc/: requirements.txt
doc/source/: api.rst  compare.rst  conf.py  extract.rst  index.rst  manifesto.rst  master-plan.rst  normalize.rst  presentation.rst
doc/source/algorithms/: dbscan.rst
ladar/: api-scanner.py  api_scanner.py  async-checker.py  main.py
ladar/api/: api.py  compare.py  extract.py  normalize.py  pipeline.py
ladar/api/algorithms/: base.py  dbscan.py  minmaxscaler.py  tfidf.py
ladar/cmds/: api.py  compare.py  extract.py  normalize.py
ladar/common/: helpers.py  io.py  package.py  ui.py  validate.py  venv.py
ladar/designer/: api.py
samples/: asyncio.yaml  eventlet.yaml
tests/common/: test_io.py  test_package.py  test_validate.py
tests/designer/: test_api.py
tests/unittests/api/: test_api.py  test_extract.py  test_normalize.py  test_pipeline.py
tests/unittests/common/: test_helpers.py  test_venv.py
