[build-system]
requires = [
  "hatch-vcs>=0.3",
  "hatchling>=1.12.2",
]
build-backend = "hatchling.build"

[project]
name = "ladar"
authors = [
    {name = "Hervé Beraud", email = "herveberaud.pro@gmail.com"},
]
description = "Design and run batch replacements."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Development Status :: 3 - Alpha",
    "Topic :: Software Development",
    "Topic :: Security",
    "Topic :: Sociology",
]
dynamic = ["version"]
dependencies = ["toml==0.10.2", "pyyaml==6.0.2"]

[project.urls]
Homepage = "https://github.com/4383/ladar"
History = "https://github.com/4383/ladar/blob/main/CHANGELOG.md"
Sponsor = "https://github.com/sponsors/4383"
Tracker = "https://github.com/4383/ladar/issues"
Source = "https://github.com/4383/ladar"

[project.scripts]
ladar = "ladar.main:main"

[project.optional-dependencies]
dev = ["black", "isort", "pip-tools", "build", "twine", "pre-commit", "commitizen"]

[options.packages.find]
where = "ladar"
exclude = "tests*"

[tool.hatch]
version.source = "vcs"

[tool.isort]
profile = "black"
